busybox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: web
    tier: backend
  name: busybox-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      tier: backend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web
        tier: backend
    spec:
      containers:
      - args:
        - /bin/sh
        - -c
        - echo hello;sleep 3600
        image: busybox
        name: busybox-deploy
        resources: {}
status: {}
