busybox-log-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox
  name: busybox
spec:
  containers:
    - args:
        - /bin/sh
        - -c
        - 'i=0; while true; do echo "$i:$(date)"; i=$((i+1)); sleep 1; done'
      image: busybox
      name: busybox
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
