busybox-multi-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox
  name: busybox
spec:
  containers:
    - args:
        - /bin/sh
        - -c
        - echo hello;sleep 3600
      image: busybox
      name: busybox
    - args:
        - /bin/sh
        - -c
        - echo hello;sleep 3600
      image: busybox
      name: busybox2
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
