nginx-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
    tier: web
  name: nginx
spec:
  containers:
    - image: nginx
      name: nginx
