nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: web
    tier: server
  name: nginx-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
      tier: server
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web
        tier: server
    spec:
      containers:
      - image: nginx
        name: nginx-deploy
        resources: {}
status: {}
