nginx-rediness-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
    - image: nginx
      name: nginx
      resources: {}
      readinessProbe:
        httpGet:
          path: /
          port: 80
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
