nginx-securityctx.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: nginx
    tier: web
  name: nginx-securityctx
spec:
  containers:
  - image: nginx
    name: nginx-securityctx
    resources: {}
    securityContext:
      runAsUser: 101
      capabilities:
        add: ["NET_ADMIN","SYS_ADMIN"]
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
