nginx1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: v1
    instance: one
  name: nginx1
spec:
  containers:
  - image: nginx
    name: nginx
    resources: {}
  livenessProbe:
    exec:
      command: 
      - ls
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
