nginx-config-env.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx
    study: confg-from-envfile
  name: nginx
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
    study: confg-from-envfile
status:
  loadBalancer: {}
---

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx
    study: confg-from-envfile
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      study: confg-from-envfile
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
        study: confg-from-envfile
    spec:
      containers:
        - image: nginx
          name: nginx
          ports:
            - containerPort: 80
          resources: {}
status: {}
